# agent-conf

./: DEVELOP.md  README.md  pyproject.toml
.agentpack/: agentpack.yaml
.agentpack/rules/: first-principles.md  task-management.md
src/agentpack/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
